# conventional-commit.ocaml

./: README.md  conventional_commit.opam  dune-project  flake.nix  hello.opam  justfile
conventional_commit/: dune-project
lib/: dune
test/: dune
